--- a/2.nodejs soketio example/client/package.json
+++ b/2.nodejs soketio example/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc client.ts && node client.js",
-    "start2": "tsc client2.ts && node client2.js"
+    "start2":"npx http-server -p 8081"
   },
   "author": "weizy0219",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "socket.io-client": "^3.1.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22"
+    "@types/node": "^14.14.22",
+    "http-server": "^0.12.3"
   }
 }
